<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btnBackProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        android:backgroundTint="@color/primaryColor121414"
        android:contentDescription="@string/description_image_button"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Edit_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/activity_student_edit_1"
        android:textColor="@color/white"
        android:textSize="@dimen/text20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/Edit_Profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSaveEdit">

        <LinearLayout
            android:id="@+id/linearId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:text="@string/activity_student_edit_2"
                android:textColor="@color/primaryColor24786D" />

            <EditText
                android:id="@+id/editProfilePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:text="@string/activity_student_edit_3"
                android:textColor="@color/primaryColor24786D" />

            <EditText
                android:id="@+id/editProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:inputType="text"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:text="@string/activity_student_edit_4"
                android:textColor="@color/primaryColor24786D" />

            <EditText
                android:id="@+id/editProfileAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:inputType="number"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSaveEdit"
        android:layout_width="@dimen/layout0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="@dimen/margin20"
        android:layout_marginBottom="@dimen/margin20"
        android:backgroundTint="@color/primaryColor24786D"
        android:text="@string/activity_student_edit_5"
        android:textColor="@color/white"
        android:textSize="@dimen/text20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

