<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor24786D">

    <ImageButton
        android:id="@+id/btnBackProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin20"
        android:backgroundTint="@color/primaryColor24786D"
        android:contentDescription="@string/description_image_view"
        android:src="@drawable/ic_back"
        android:elevation="@dimen/margin10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imViewAvatarProfile"
                android:layout_width="@dimen/layout120"
                android:layout_height="@dimen/layout120"
                android:contentDescription="@string/description_image_view"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin20"/>

            <TextView
                android:id="@+id/nameStudentProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_student_details_1"
                android:textColor="@color/white"
                android:textSize="@dimen/text20"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin20"/>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout0"
        android:background="@drawable/background_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin30"
            android:text="@string/activity_student_details_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ageStudentProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin30"
            android:layout_marginTop="@dimen/margin60"
            android:text="@string/activity_student_details_3"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="@dimen/layout0"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin20"
            android:backgroundTint="@color/primaryColor24786D"
            android:text="@string/activity_student_details_4"
            android:textColor="@color/white"
            android:textSize="@dimen/text20"
            app:layout_constraintBottom_toTopOf="@id/tvDeleteProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvDeleteProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin20"
            android:gravity="center"
            android:text="@string/activity_student_details_5"
            android:textColor="@color/primaryColor24786D"
            android:textSize="@dimen/text20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>